# actr-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish-actr-python.yml
examples/ask/: stream_server.py
examples/ask/protos/local/: ask_service.proto
examples/data-stream-peer-concurrent/: README.md  actrix-config.example.toml  requirements.txt  start.sh
examples/data-stream-peer-concurrent/client/: Actr.example.toml  Actr.lock.toml  client.py  stream_client.py
examples/data-stream-peer-concurrent/server/: Actr.example.toml  Actr.lock.toml  server.py  stream_server.py
examples/data-stream-peer-concurrent/server/protos/local/: data_stream_peer_server.proto
examples/data-stream-peer-concurrent/server/protos/remote/data-stream-peer-concurrent-client-python/: data_stream_peer_client.proto
examples/stream-echo/: README.md
examples/stream-echo/client/: Actr.lock.toml  client.py
examples/stream-echo/client/protos/local/: stream_client.proto
examples/stream-echo/client/protos/remote/stream-register-server-python/: stream_server.proto
examples/stream-echo/server/: Actr.lock.toml  server.py
examples/stream-register/client/: client.py
examples/stream-register/client/protos/: stream_client.proto
examples/stream-register/server/: server.py
examples/stream-register/server/protos/: stream_server.proto
python/actr/: __init__.py  __init__.pyi  workload.py
python/actr/actr_raw/: __init__.py  __init__.pyi
python/actr/decorators/: __init__.py
python/actr_python_sdk/: __init__.py
python/actr_python_sdk/binding/: __init__.py
python/actr_sdk/: __init__.py  __init__.pyi
python/actr_sdk/decorators/: __init__.py
src/: conversions.rs  errors.rs  lib.rs  observability.rs  runtime.rs  types.rs  workload.rs
