[package]
name = "actr-python"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr-python"
authors = ["Actor-RTC Contributors"]
description = "Python bindings for actr (actr_python)"
readme = "README.md"
keywords = ["actor", "python", "webrtc", "distributed", "realtime", "p2p"]
categories = ["network-programming", "asynchronous", "web-programming"]

[lib]
name = "actr_python"
crate-type = ["cdylib"]

[dependencies]
# TODO: Use Version instead of git
actr-runtime = { git = "https://github.com/actor-rtc/actr.git", rev = "76bf743f0bf95e0374e5cb1bbc0a8d64cfd5462e" }
actr-config = { git = "https://github.com/actor-rtc/actr.git", rev = "76bf743f0bf95e0374e5cb1bbc0a8d64cfd5462e" }
actr-framework = { git = "https://github.com/actor-rtc/actr.git", rev = "76bf743f0bf95e0374e5cb1bbc0a8d64cfd5462e" }
actr-protocol = { git = "https://github.com/actor-rtc/actr.git", rev = "76bf743f0bf95e0374e5cb1bbc0a8d64cfd5462e" }
tokio = { version = "1.48", features = ["full"] }
bytes = "1.10"
prost = "0.14"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
prost-types = "0.14"

pyo3 = { version = "0.27", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
