[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "actr-sdk"
description = "Python SDK for Actor-RTC, backed by the actr_raw Rust extension module."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Actor-RTC Contributors" }]
keywords = ["actor", "webrtc", "distributed-systems", "async", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/actor-rtc/actr"
Documentation = "https://github.com/actor-rtc/actr/blob/main/actor-rtc.github.io/zh-hans/PY_BINDING.md"
Source = "https://github.com/actor-rtc/actr-python"
Issues = "https://github.com/actor-rtc/actr-python/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "actr_raw"
bindings = "pyo3"
strip = true
# Explicitly include actr_sdk package
include = [
    "python/actr_sdk/**/*.py",
    "python/actr_sdk/**/*.pyi",
    "python/actr_sdk/py.typed",
]
python-packages = ["actr_sdk"]
sdist-include = [
    "python/README.md",
    "python/DEMO.md",
    "python/ARCHITECTURE.md",
    "python/OVERVIEW.md",
    "python/SUMMARY.md",
    "python/demo_complete.py",
    "python/demo_echo_service.py",
    "python/example_decorator_usage.py",
]
